superbitty/tests/ui/bitfields/invalid_attributes.stderr
error: only doc comments and `#[derive(…)]` are allowed with `bitfields!`
 --> $DIR/invalid_attributes.rs:4:5
  |
4 |     #[foo]
  |     ^^^^^^

error: only doc comments and `#[derive(…)]` are allowed with `bitfields!`
 --> $DIR/invalid_attributes.rs:6:5
  |
6 |     #[bar = 123]
  |     ^^^^^^^^^^^^

error: only doc comments and `#[derive(…)]` are allowed with `bitfields!`
 --> $DIR/invalid_attributes.rs:8:5
  |
8 |     #[baz(abc)]
  |     ^^^^^^^^^^^
